# lexbor_erl

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile.test  Makefile  README.md  debug_test.erl  demo1.erl  demo2.erl  rebar.config  test_unicode.erl
.github/workflows/: README.md  ci.yml
c_src/: CMakeLists.txt  build.sh  port_main.c  port_main_test.c
demo/: .gitignore  Makefile  README.md  rebar.config
demo/src/: lexbor_demo.app.src  lexbor_demo.erl
examples/: attribute_example.erl  chunk_based_streaming_example.erl  node_example.erl  select_example.erl  text_example.erl  unicode_example.erl
src/: lexbor_erl.app.src  lexbor_erl.erl  lexbor_erl_app.erl  lexbor_erl_pool.erl  lexbor_erl_port.erl  lexbor_erl_sup.erl  lexbor_erl_worker.erl
test/: lexbor_erl_SUITE.erl  lexbor_erl_append_content_SUITE.erl  lexbor_erl_basic_SUITE.erl  lexbor_erl_dom_SUITE.erl  lexbor_erl_fault_SUITE.erl  lexbor_erl_insert_after_content_SUITE.erl  lexbor_erl_insert_before_content_SUITE.erl  lexbor_erl_parallel_SUITE.erl  lexbor_erl_prepend_content_SUITE.erl  lexbor_erl_replace_content_SUITE.erl  lexbor_erl_serialize_verification_SUITE.erl  lexbor_erl_stateful_SUITE.erl  lexbor_erl_stream_SUITE.erl
